initial changes for getting stuff building and running

--- a/testanalytics_frontend/pom.xml
+++ b/testanalytics_frontend/pom.xml
@@ -12,16 +12,17 @@
 
   <pluginRepositories>
     <pluginRepository>
-      <id>has gwt-dnd 3.1.1</id>
+      <id>has gwt-dnd 3.1.2</id>
       <url>http://gwtquery-plugins.googlecode.com/svn/mavenrepo</url>
     </pluginRepository>
   </pluginRepositories>
 
   <dependencies>
+
     <dependency>
-      <groupId>com.google.code.gwt-dnd</groupId>
+      <groupId>com.allen-sauer.gwt.dnd</groupId>
       <artifactId>gwt-dnd</artifactId>
-      <version>3.1.1</version>
+      <version>3.1.2</version>
     </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
@@ -150,7 +151,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.1-beta-1</version>
+        <version>2.1.1</version>
         <configuration>
           <webResources>
             <resource>
@@ -205,9 +206,9 @@
             <version>10.0-rc1</version>
           </dependency>
           <dependency>
-            <groupId>com.google.code.gwt-dnd</groupId>
-            <artifactId>gwt-dnd</artifactId>
-            <version>3.1.1</version>
+            <groupId>com.allen-sauer.gwt.dnd</groupId>
+		        <artifactId>gwt-dnd</artifactId>
+            <version>3.1.2</version>
           </dependency>
           <dependency>
             <groupId>com.google.appengine</groupId>
